--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "merlijn/mikko-test",
+    "name": "merlijn/icontroller-mikko-test",
     "description": "Mikko tst 4 iController",
     "authors": [
         {
@@ -13,6 +13,8 @@
         }
     },
     "require": {
+        "doctrine/common": "2.6.1",
+        "phpunit/phpunit": "~4.8",
         "symfony/monolog-bundle": "~2.4",
         "symfony/console": "3.0.6"
     }
